--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -32,10 +32,19 @@
       <ul class="list-group">
         <% for (let i = 0; i < notes.length; i++) { %>
           <li class="list-group-item d-flex justify-content-between align-items-center">
-            <span><%= notes[i].title %></span>
-						<div class="d-flex" style="gap: 10px;">
-							<button class="btn btn-primary" data-type="update" data-id="<%= notes[i].id %>">Редактировать</button>
-							<button class="btn btn-danger" data-type="remove" data-id="<%= notes[i].id %>">&times;</button>
+						<div class="info-group d-flex justify-content-between align-items-center">
+							<span><%= notes[i].title %></span>
+							<input class="d-none" value="<%= notes[i].title %>" type="text" name="title">
+						</div>
+						<div class="actions-group d-flex justify-content-between align-items-center">
+							<div class="d-flex d-none" style="gap: 10px;" data-type="redact">
+								<button class="btn btn-success" data-type="save" data-id="<%= notes[i].id %>">Сохранить</button>
+								<button class="btn btn-danger" data-type="abort" data-id="<%= notes[i].id %>">Отменить</button>
+							</div>
+							<div class="d-flex" style="gap: 10px;" data-type="actions">
+								<button class="btn btn-primary" data-type="update" data-id="<%= notes[i].id %>">Редактировать</button>
+								<button class="btn btn-danger" data-type="remove" data-id="<%= notes[i].id %>">&times;</button>
+							</div>
 						</div>
           </li>
         <% } %>
