--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -1,66 +1,74 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <title><%= title %></title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<title>
+		<%= title %>
+	</title>
 </head>
+
 <body>
 
-  <% if (created) {%>
-    <div class="alert alert-success">
-      Note has been created!
-    </div>
-  <% } %>
+	<% if (created) {%>
+		<div class="alert alert-success">
+			Note has been created!
+		</div>
+	<% } %>
 
 	<% if (error) {%>
-    <div class="alert alert-danger">
-      Something went wrong!
-    </div>
-  <% } %>
+		<div class="alert alert-danger">
+			Something went wrong!
+		</div>
+	<% } %>
 
-  <div class="container">
-    <h1><%= title %></h1>
+	<div class="container">
+		<h1>
+			<%= title %>
+		</h1>
 
-    <form action="/" method="post" class="mb-2">
-      <div class="form-group mb-2">
-        <input type="text" class="form-control" name="title" required>
-      </div>
+		<form action="/" method="post" class="mb-2">
+			<div class="form-group mb-2">
+				<input type="text" class="form-control" name="title" required>
+			</div>
 
-      <button class="btn btn-primary" type="submit">Create!</button>
-    </form>
+			<button class="btn btn-primary" type="submit">Create!</button>
+		</form>
 
-    <% if (notes.length) { %>
-    <div class="card">
-      <ul class="list-group">
-        <% for (let i = 0; i < notes.length; i++) { %>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-						<div class="info-group d-flex justify-content-between align-items-center">
-							<span><%= notes[i].title %></span>
-							<input class="d-none" value="<%= notes[i].title %>" type="text" name="title">
-						</div>
-						<div class="actions-group d-flex justify-content-between align-items-center">
-							<div class="d-flex d-none" style="gap: 10px;" data-type="redact">
-								<button class="btn btn-success" data-type="save" data-id="<%= notes[i].id %>">Сохранить</button>
-								<button class="btn btn-danger" data-type="abort" data-id="<%= notes[i].id %>">Отменить</button>
+		<% if (notes.length) { %>
+			<div class="card">
+				<ul class="list-group">
+					<% for (let i=0; i < notes.length; i++) { %>
+						<li class="list-group-item d-flex justify-content-between align-items-center">
+							<div class="info-group d-flex justify-content-between align-items-center">
+								<span>
+									<%= notes[i].title %>
+								</span>
+								<input class="d-none" value="<%= notes[i].title %>" type="text" name="title">
 							</div>
-							<div class="d-flex" style="gap: 10px;" data-type="actions">
-								<button class="btn btn-primary" data-type="update" data-id="<%= notes[i].id %>">Редактировать</button>
-								<button class="btn btn-danger" data-type="remove" data-id="<%= notes[i].id %>">&times;</button>
+							<div class="actions-group d-flex justify-content-between align-items-center">
+								<div class="d-flex d-none" style="gap: 10px;" data-type="redact">
+									<button class="btn btn-success" data-type="save" data-id="<%= notes[i].id %>">Сохранить</button>
+									<button class="btn btn-danger" data-type="abort" data-id="<%= notes[i].id %>">Отменить</button>
+								</div>
+								<div class="d-flex" style="gap: 10px;" data-type="actions">
+									<button class="btn btn-primary" data-type="update" data-id="<%= notes[i].id %>">Редактировать</button>
+									<button class="btn btn-danger" data-type="remove" data-id="<%= notes[i].id %>">&times;</button>
+								</div>
 							</div>
-						</div>
-          </li>
-        <% } %>
-      </ul>
-    </div>
-    <% } else { %>
-      <p>No notes!</p>
-    <% } %>
-  </div>
+						</li>
+					<% } %>
+				</ul>
+			</div>
+		<% } else { %>
+			<p>No notes!</p>
+		<% } %>
+	</div>
 
-<script src="/app.js"></script>
+	<script src="/app.js"></script>
 </body>
+
 </html>
